# COMP522

./: bench-1-n.sh  bench.sh  report-correctness.md  report-performance.md  valgrind.sh
SALSA/: CMakeList.txt  CMakeLists.txt  ConsumerThread.cpp  Main.cpp  NoFIFOPool.cpp  NoFIFOPool.h  NoFIFOStealing.cpp  ProducerThread.cpp  SPChunk.h  SwedishPool.h  Threads.cpp  atomicMarkedReference.h  config.txt
SALSA-knl/: ArchEnvironment.cpp  Atomic.h  CMakeLists.txt  Producer.h  SPChunk.cpp  Threads.h  config.txt
SALSA-knl/configs/: config.1.bind.uninit.txt  config.1.unbind.init.txt  config.1.unbind.uninit.txt  config.128.bind.init.txt  config.128.bind.uninit.txt  config.128.unbind.init.txt  config.128.unbind.uninit.txt  config.16.bind.init.txt  config.16.bind.uninit.txt  config.16.unbind.init.txt  config.16.unbind.uninit.txt  config.2.bind.init.txt  config.2.bind.uninit.txt  config.2.unbind.init.txt  config.2.unbind.uninit.txt  config.32.bind.init.txt  config.32.bind.uninit.txt  config.32.unbind.init.txt  config.32.unbind.uninit.txt  config.4.bind.init.txt  config.4.bind.uninit.txt  config.4.unbind.init.txt  config.4.unbind.uninit.txt  config.64.bind.init.txt  config.64.bind.uninit.txt  config.64.unbind.init.txt  config.64.unbind.uninit.txt  config.8.bind.init.txt  config.8.bind.uninit.txt  config.8.unbind.init.txt  config.8.unbind.uninit.txt
SALSA-knl/configs-1-n/: config.1.bind.init.txt  config.128.bind.init.txt  config.16.bind.init.txt  config.2.bind.init.txt  config.32.bind.init.txt  config.4.bind.init.txt  config.64.bind.init.txt  config.8.bind.init.txt
(+348 files in other folders)
